crates/hpc-core/tests/compile_fail/api_inflight_write.stderr
warning: unreachable expression
  --> tests/compile_fail/api_inflight_write.rs:12:55
   |
12 |     let (inflight, _evt) = buf.enqueue_kernel(&queue, &unimplemented!(), 16).unwrap();
   |                                                       ^----------------
   |                                                       ||
   |                                                       |any code following this expression is unreachable
   |                                                       unreachable expression
   |
   = note: `#[warn(unreachable_code)]` on by default

error[E0308]: mismatched types
  --> tests/compile_fail/api_inflight_write.rs:12:55
   |
12 |     let (inflight, _evt) = buf.enqueue_kernel(&queue, &unimplemented!(), 16).unwrap();
   |                                --------------         ^^^^^^^^^^^^^^^^^ expected `&Kernel<'_>`, found `&!`
   |                                |
   |                                arguments to this method are incorrect
   |
   = note: expected reference `&Kernel<'_>`
              found reference `&!`
note: method defined here
  --> src/api/device_buffer/ready/mod.rs
   |
   |     pub fn enqueue_kernel(
   |            ^^^^^^^^^^^^^^

error[E0599]: no method named `overwrite_blocking` found for struct `DeviceBuffer<'_, u8, InFlight>` in the current scope
  --> tests/compile_fail/api_inflight_write.rs:15:14
   |
15 |     inflight.overwrite_blocking(&queue, &[1u8; 16]).unwrap();
   |              ^^^^^^^^^^^^^^^^^^ method not found in `DeviceBuffer<'_, u8, InFlight>`
   |
   = note: the method was found for
           - `DeviceBuffer<'brand, T, hpc_core::Ready>`
